--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
         goversion: "https://go.dev/dl/go1.19.linux-amd64.tar.gz"
+        ldflags: -X "main.version=${GITHUB_REF}"
         project_path: "./client"
         binary_name: "trav"
         asset_name: trav-${{ matrix.goos }}-${{ matrix.goarch }}
